@@ -1,6 +1,6 @@
 /*
  * Catroid: An on-device visual programming system for Android devices
- * Copyright (C) 2010-2022 The Catrobat Team
+ * Copyright (C) 2010-2026 The Catrobat Team
  * (<http://developer.catrobat.org/credits>)
  *
  * This program is free software: you can redistribute it and/or modify
@@ -24,12 +24,12 @@
 package org.catrobat.catroid.ui.runtimepermissions;
 
 import android.annotation.SuppressLint;
+import android.os.Build;
 
 import org.catrobat.catroid.content.bricks.Brick;
 
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -41,6 +41,9 @@ import static android.Manifest.permission.ACCESS_FINE_LOCATION;
 import static android.Manifest.permission.ACCESS_WIFI_STATE;
 import static android.Manifest.permission.BLUETOOTH;
 import static android.Manifest.permission.BLUETOOTH_ADMIN;
+import static android.Manifest.permission.BLUETOOTH_ADVERTISE;
+import static android.Manifest.permission.BLUETOOTH_CONNECT;
+import static android.Manifest.permission.BLUETOOTH_SCAN;
 import static android.Manifest.permission.CAMERA;
 import static android.Manifest.permission.CHANGE_WIFI_MULTICAST_STATE;
 import static android.Manifest.permission.CHANGE_WIFI_STATE;
@@ -55,30 +58,37 @@ public final class BrickResourcesToRuntimePermissions {
 		throw new AssertionError("No.");
 	}
 
-	@SuppressLint("UseSparseArrays")
-	public static List<String> translate(Brick.ResourcesSet brickResources) {
+	@SuppressLint({"UseSparseArrays", "InlinedApi"})
+	public static List<String> translate(Brick.ResourcesSet brickResources, int apiLevel) {
 		Map<Integer, List<String>> brickResourcesToPermissions = new HashMap<>();
-		brickResourcesToPermissions.put(Brick.SENSOR_GPS, Arrays.asList(ACCESS_FINE_LOCATION, ACCESS_COARSE_LOCATION));
-		List<String> bluetoothPermissions = Arrays.asList(BLUETOOTH_ADMIN, BLUETOOTH);
+		brickResourcesToPermissions.put(
+				Brick.SENSOR_GPS, Arrays.asList(ACCESS_FINE_LOCATION, ACCESS_COARSE_LOCATION));
+
+		List<String> bluetoothPermissions = apiLevel >= Build.VERSION_CODES.S
+				? Arrays.asList(BLUETOOTH_ADVERTISE, BLUETOOTH_SCAN, BLUETOOTH_CONNECT)
+				: Arrays.asList(BLUETOOTH_ADMIN, BLUETOOTH);
 		brickResourcesToPermissions.put(Brick.BLUETOOTH_LEGO_NXT, bluetoothPermissions);
 		brickResourcesToPermissions.put(Brick.BLUETOOTH_LEGO_EV3, bluetoothPermissions);
 		brickResourcesToPermissions.put(Brick.BLUETOOTH_PHIRO, bluetoothPermissions);
 		brickResourcesToPermissions.put(Brick.BLUETOOTH_SENSORS_ARDUINO, bluetoothPermissions);
-		List<String> wifiPermissions = Arrays.asList(CHANGE_WIFI_MULTICAST_STATE, CHANGE_WIFI_STATE, ACCESS_WIFI_STATE);
+		brickResourcesToPermissions.put(Brick.BLUETOOTH_MULTIPLAYER, bluetoothPermissions);
+
+		List<String> wifiPermissions = Arrays.asList(
+				CHANGE_WIFI_MULTICAST_STATE, CHANGE_WIFI_STATE, ACCESS_WIFI_STATE);
 		brickResourcesToPermissions.put(Brick.CAST_REQUIRED, wifiPermissions);
-		brickResourcesToPermissions.put(Brick.CAMERA_BACK, Arrays.asList(CAMERA));
-		brickResourcesToPermissions.put(Brick.CAMERA_FRONT, Arrays.asList(CAMERA));
-		brickResourcesToPermissions.put(Brick.VIDEO, Arrays.asList(CAMERA));
-		brickResourcesToPermissions.put(Brick.CAMERA_FLASH, Arrays.asList(CAMERA));
-		brickResourcesToPermissions.put(Brick.VIBRATION, Arrays.asList(VIBRATE));
-		brickResourcesToPermissions.put(Brick.NFC_ADAPTER, Arrays.asList(NFC));
-		brickResourcesToPermissions.put(Brick.FACE_DETECTION, Collections.singletonList(CAMERA));
-		brickResourcesToPermissions.put(Brick.OBJECT_DETECTION, Collections.singletonList(CAMERA));
-		brickResourcesToPermissions.put(Brick.POSE_DETECTION, Collections.singletonList(CAMERA));
-		brickResourcesToPermissions.put(Brick.TEXT_DETECTION, Collections.singletonList(CAMERA));
-		brickResourcesToPermissions.put(Brick.MICROPHONE, Arrays.asList(RECORD_AUDIO));
-		brickResourcesToPermissions.put(Brick.STORAGE_READ, Arrays.asList(READ_EXTERNAL_STORAGE));
-		brickResourcesToPermissions.put(Brick.STORAGE_WRITE, Arrays.asList(WRITE_EXTERNAL_STORAGE));
+		brickResourcesToPermissions.put(Brick.CAMERA_BACK, List.of(CAMERA));
+		brickResourcesToPermissions.put(Brick.CAMERA_FRONT, List.of(CAMERA));
+		brickResourcesToPermissions.put(Brick.VIDEO, List.of(CAMERA));
+		brickResourcesToPermissions.put(Brick.CAMERA_FLASH, List.of(CAMERA));
+		brickResourcesToPermissions.put(Brick.VIBRATION, List.of(VIBRATE));
+		brickResourcesToPermissions.put(Brick.NFC_ADAPTER, List.of(NFC));
+		brickResourcesToPermissions.put(Brick.FACE_DETECTION, List.of(CAMERA));
+		brickResourcesToPermissions.put(Brick.OBJECT_DETECTION, List.of(CAMERA));
+		brickResourcesToPermissions.put(Brick.POSE_DETECTION, List.of(CAMERA));
+		brickResourcesToPermissions.put(Brick.TEXT_DETECTION, List.of(CAMERA));
+		brickResourcesToPermissions.put(Brick.MICROPHONE, List.of(RECORD_AUDIO));
+		brickResourcesToPermissions.put(Brick.STORAGE_READ, List.of(READ_EXTERNAL_STORAGE));
+		brickResourcesToPermissions.put(Brick.STORAGE_WRITE, List.of(WRITE_EXTERNAL_STORAGE));
 
 		Set<String> requiredPermissions = new HashSet<>();
 		for (int brickResource : brickResources) {
